# daintree

./: .gitignore  .gitlab-ci.yml  .tool-versions  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  README.md  package.json  renovate.json  tsconfig.json  vue.config.js
public/: changelog.json  cognito_callback.html  index.html
src/: App.vue  decs.d.ts  main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src/assets/css/: flags.css
src/components/: CognitoCallback.vue  Login.vue  MainMenu.vue
src/components/EC2/: EC2Main.vue  elbListComponent.ts  routes.ts
src/components/ECS/: ECSMain.vue  ecsComponent.ts  routes.ts
src/components/Header/: AssumeRoleModal.vue  Header.vue  Notifier.vue  RegionModal.vue  SubHeader.vue
src/components/cloudwatch/: CloudwatchModal.vue  CloudwatchWidget.vue
src/components/common/: Announcements.vue  CollapsableCard.vue  DeleteButtonWithConfirmation.vue  DrawerCards.vue  RegionText.vue  ResourceMainMenu.vue  StateText.vue  TagsTable.vue  cardContent.d.ts  menuEntry.d.ts  regions.ts  tags.ts
src/components/messages/: MessagesMain.vue  routes.ts
src/components/network/: NetworkMain.vue  networkComponent.ts  routes.ts
src/mixins/: DaintreeComponent.ts  DaintreeListComponent.ts  formatters.ts  notifications.ts
src/router/: index.ts
src/store/: index.ts
src/store/cloudwatch/: getters.ts  mutations.ts  state.ts
src/utils/: clientToken.ts  isString.ts
src/views/: 404.vue  About.vue  Changelog.vue  Contribute.vue  Home.vue  OAuth.vue  Security.vue  SelfHosted.vue
(+125 files in other folders)
