[package]
name = "daintree"
version = "0.10.0"
description = "A Tauri App"
authors = [ "you" ]
license = "AGPLv3"
repository = "gitlab:rpadovani/daintree"
default-run = "daintree"
edition = "2018"
build = "src/build.rs"

[build-dependencies]
tauri-build = { version = "1.0.0-beta.1" }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = [ "derive" ] }

  [dependencies.tauri]
  version = "1.0.0-beta"
features = ["api-all"]

[features]
default = [ "custom-protocol" ]
custom-protocol = [ "tauri/custom-protocol" ]
